# optiz

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: testing.cmake
include/Optiz/: Optiz.h  Problem.h
include/Optiz/Autodiff/: MetaConst.h  MetaGrad.h  MetaMat.h  MetaUtils.h  MetaVar.h  MetaVec.h  ProjectHessian.h  ReverseGradMetaVar.h  SelfAdjointMapMatrix.h  SparseVector.h  TDenseVar.h  Var.h  VarGrad.h
include/Optiz/Common/: Functions.h  Polynomial.h  SparseUtils.h  Utils.h  VectorMap.h
include/Optiz/Linear/: LinearExpression.h  LinearExpressionBase.h  LinearExpressionVec2.h  QuadraticObjective.h  QuadraticObjectiveCD.h  QuadraticObjectiveD.h
include/Optiz/Meta/: MetaIntMap.h  MetaMat.h  MetaSparseMat.h  MetaUtils.h  MetaVec.h
include/Optiz/NewtonSolver/: Common.h  Complex.h  ElementFunc.h  Problem.h  SelfAdjointMapMatrix.h  SparseVector.h  TDenseVar.h  Utils.h  Var.h  VarFactory.h  VectorMap.h
src/Common/: Polynomial.cpp  Utils.cpp
src/Linear/: QuadraticObjectiveCD.cpp  QuadraticObjectiveD.cpp
src/NewtonSolver/: ElementFunc.cpp  Problem.cpp  ProjectHessian.cpp  SelfAdjointMapMatrix.cpp  SparseVector.cpp  Utils.cpp  Var.cpp  VarFactory.cpp  VarGrad.cpp
tests/: MetaVar_test.cpp  TDenseVar_test.cpp  Var_test.cpp  test_utils.cpp  test_utils.h
